change ifo to ispo

--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -29,7 +29,7 @@
   "I understand": "我了解",
   "Claim prizes": "领取奖金",
   "Enable CAKE": "批准 CAKE",
-  "IFO: Initial Farm Offerings": "IFO：首次挖矿发行",
+  "ISPO: Initial Farm Offerings": "ISPO：首次挖矿发行",
   "Buy new tokens launching on BNB Smart Chain": "购买在币安智能链上发起的新代币",
   "Community": "社区",
   "Core": "核心",
@@ -49,7 +49,7 @@
   "Pools": "糖浆池",
   "NFT": "NFT",
   "Info": "信息",
-  "IFO": "IFO",
+  "ISPO": "ISPO",
   "More": "更多",
   "Liquidity": "流动性",
   "Overview": "概览",
@@ -144,7 +144,7 @@
   "Your Score": "您的分数",
   "Enable": "启用",
   "Enabling": "正在启用",
-  "IFO Shopper: %title%": "IFO 购买者：%title%",
+  "ISPO Shopper: %title%": "ISPO 购买者：%title%",
   "%num% of total": "全部的 %num%",
   "All estimated rates take into account this pool’s %fee%% performance fee": "所有预估汇率均已考虑此糖浆池 %fee%% 的表现费",
   "Sorry, you didn’t contribute enough CAKE to meet the minimum threshold. You didn’t buy anything in this sale, but you can still reclaim your CAKE.": "抱歉，您未贡献足够的 CAKE 来满足最低阈值。您在此销售中未进行任何购买，但您仍可以收回您的 CAKE。",
@@ -198,12 +198,12 @@
   "Max. token entry": "最大代币输入",
   "Max. CAKE entry": "最大 CAKE 输入",
   "Activate your Profile": "激活您的个人资料",
-  "You’ll need an active PancakeSwap Profile to take part in an IFO!": "您需要有效的 Pancakeswap 个人资料才能参与 IFO！",
+  "You’ll need an active PancakeSwap Profile to take part in an ISPO!": "您需要有效的 Pancakeswap 个人资料才能参与 ISPO！",
   "Profile Active!": "个人资料有效！",
   "Commit CAKE": "提交 CAKE",
-  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to IFO sales. You will need a separate amount of CAKE in your wallet balance to commit to the IFO sales.": "请注意，定期质押头寸中的 CAKE 将保持锁定状态，不能用于参与 IFO 销售。您需要在钱包余额中拥有单独的 CAKE 以参与 IFO 销售。",
+  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to ISPO sales. You will need a separate amount of CAKE in your wallet balance to commit to the ISPO sales.": "请注意，定期质押头寸中的 CAKE 将保持锁定状态，不能用于参与 ISPO 销售。您需要在钱包余额中拥有单独的 CAKE 以参与 ISPO 销售。",
   "Claim your tokens and achievement": "领取您的代币和成就",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "在 IFO 销售完成后，您可以领取您购买的任何 IFO 代币，任何未花费的 CAKE 代币都将退回您的钱包。",
+  "After the ISPO sales finish, you can claim any ISPO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "在 ISPO 销售完成后，您可以领取您购买的任何 ISPO 代币，任何未花费的 CAKE 代币都将退回您的钱包。",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "此回合的平仓交易已提交给区块链，正在等待确认。",
   "No prediction history available": "无可用的预测历史记录",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "如果您确定应该在此处查看历史记录，请确保您已连接到正确的钱包，然后重试。",
@@ -256,13 +256,13 @@
   "Funds to raise:": "要筹集的资金：",
   "Price per %symbol%:": "每个 %symbol% 的价格：",
   "Price per %symbol% with fee:": "每个 %symbol% 的价格和费用：",
-  "You need an active PancakeSwap Profile to take part in an IFO!": "您需要有效的 PancakeSwap 个人资料才能参与 IFO！",
+  "You need an active PancakeSwap Profile to take part in an ISPO!": "您需要有效的 PancakeSwap 个人资料才能参与 ISPO！",
   "Achievement": "成就",
   "Which sale should I commit to? Can I do both?": "我应该在哪种销售中提交？我可以同时参与两者吗？",
   "How much is the participation fee?": "参与费用是多少？",
   "Where does the participation fee go?": "参与费用会去往何处？",
   "The CAKE from the participation fee will be burnt as part of the weekly token burn.": "参与费用中的 CAKE 将作为每周代币焚毁的一部分被焚毁。",
-  "How can I get an achievement for participating in the IFO?": "如何获得参与 IFO 的成就？",
+  "How can I get an achievement for participating in the ISPO?": "如何获得参与 ISPO 的成就？",
   "You need to contribute a minimum of about 10 USD worth of CAKE to either sale.": "您需要为任意一种销售贡献价值至少为约 10 美元的 CAKE。",
   "Contract Enabled": "合约已启用",
   "You can now stake in the %symbol% vault!": "您现在可以在 %symbol% 保险库中质押了！",
@@ -454,7 +454,7 @@
   "Please authorize to access your account": "请授权访问您的帐户",
   "Unable to find connector": "无法找到连接器",
   "The connector config is wrong": "连接器配置错误",
-  "You have contributed %amount% CAKE to this IFO!": "您已经为此 IFO 贡献 %amount% CAKE！",
+  "You have contributed %amount% CAKE to this ISPO!": "您已经为此 ISPO 贡献 %amount% CAKE！",
   "Your %symbol% committed": "您的 %symbol% 已提交",
   "Your %symbol% RECLAIMED": "您的已收回 %symbol%",
   "Your %symbol% TO RECLAIM": "您的待收回 %symbol%",
@@ -493,12 +493,12 @@
   "Contact": "联系我们",
   "The higher your team’s rank, the better your prizes!": "团队排名越高，奖金就越多！",
   "Get Ready": "准备好",
-  "Activate PancakeSwap Profile to take part in next IFO‘s!": "激活 PancakeSwap 个人资料以参与下次 IFO！",
+  "Activate PancakeSwap Profile to take part in next ISPO‘s!": "激活 PancakeSwap 个人资料以参与下次 ISPO！",
   "Trading Battle": "交易战斗",
   "Prediction": "预测",
-  "Initial Farm Offering": "首次挖矿发行",
+  "Initial Staking Pool Offering": "首次挖矿发行",
   "Successfully Enabled!": "已成功启用！",
-  "You can now participate in the %symbol% IFO.": "您现在可以参与 %symbol% IFO 了。",
+  "You can now participate in the %symbol% ISPO.": "您现在可以参与 %symbol% ISPO 了。",
   "Team Ranks": "团队排名",
   "Prizes": "奖金",
   "Rules": "规则",
@@ -1350,7 +1350,7 @@
   "Supply Count": "供应数量",
   "Brand": "品牌",
   "Success": "成功",
-  "Go to IFO": "转到 IFO",
+  "Go to ISPO": "转到 ISPO",
   "Phishing warning: ": "钓鱼警告：",
   "please make sure you're visiting https://pancakeswap.finance - check the URL carefully.": "请确保您访问的是 https://pancakeswap.finance - 请仔细检查网址。",
   "No bids yet": "还没有出价",
@@ -1361,7 +1361,7 @@
   "You can swap WBNB for BNB (and vice versa) with no trading fees.": "您可以将 WBNB 兑换为 BNB（反之亦然），无需任何交易费用。",
   "Exchange rate is always 1 to 1.": "汇率始终为 1:1。",
   "You can contribute to one or both, it doesn’t matter: only your overall contribution is counted for the achievement.": "您可以为一种或两种销售做贡献，但这无关紧要：成就仅计算您的整体贡献。",
-  "You’ll need %symbol% tokens to participate in the IFO!": "您需要 %symbol% 代币才能参与 IFO！",
+  "You’ll need %symbol% tokens to participate in the ISPO!": "您需要 %symbol% 代币才能参与 ISPO！",
   "Get %symbol%, or make sure your tokens aren’t staked somewhere else.": "获取 %symbol%，或确保没有在其他地方质押您的代币。",
   "Refresh": "刷新",
   "Basic": "基础",
@@ -1370,23 +1370,23 @@
   "Sign up for battle and you’re guaranteed a prize!": "报名参加战斗，保证有奖金！",
   "Compete with other teams for the highest trading volume!": "与其他团队竞争最高交易量！",
   "Trading Competition": "交易大赛",
-  "To participate in the next IFO, lock some CAKE in the fixed-term staking CAKE pool!": "要参与下一个 IFO，请在定期质押 CAKE 糖浆池中锁定一些 CAKE！",
+  "To participate in the next ISPO, lock some CAKE in the fixed-term staking CAKE pool!": "要参与下一个 ISPO，请在定期质押 CAKE 糖浆池中锁定一些 CAKE！",
   "Lock CAKE in the CAKE pool": "在 CAKE 糖浆池中锁定 CAKE",
   "How does the number of iCAKE calculated?": "iCAKE 数量是如何计算的？",
   "Learn more about iCAKE": "详细了解 iCAKE",
   "For the basic sale, Max CAKE entry is capped by minimum between your average CAKE balance in the iCAKE, or the pool’s hard cap. To increase the max entry, Stake more CAKE into the iCAKE": "对于基础销售，最大 CAKE 输入的上限为您在 iCAKE 中的平均 CAKE 余额和糖浆池的硬上限这两者中的较小值。要增加最大输入，请在 iCAKE 中质押更多 CAKE",
-  "You don’t have any iCAKE available for IFO public sale.": "您没有任何可用于 IFO 公开销售的 iCAKE。",
+  "You don’t have any iCAKE available for ISPO public sale.": "您没有任何可用于 ISPO 公开销售的 iCAKE。",
   "Sale Finished!": "销售已完成！",
   "Start in": "开始时间倒计时：",
   "Exceeded max CAKE entry": "超出最大 CAKE 输入",
   "Only applies within %num% days of staking. Unstaking after %num% days will not include a fee. Timer resets every time you stake new CAKE in the pool.": "仅在质押后 %num% 天内适用。%num% 天后取消质押无需收取费用。每当您在糖浆池中质押新的 CAKE 时，计时器将会被重置。",
   "unstaking fee if withdrawn within %num%h": "取消质押费用（在 %num% 小时内提取）",
   "Earn %asset%": "赚取 %asset%",
-  "IFO Pool": "IFO 糖浆池",
+  "ISPO Pool": "ISPO 糖浆池",
   "Chart": "图表",
   "by": "按照",
   "You’ve successfully claimed tokens back.": "您已成功领取回代币。",
-  "Stake CAKE to participate in IFOs": "质押 CAKE 以参与 IFO",
+  "Stake CAKE to participate in IFOs": "质押 CAKE 以参与 ISPO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "与我们一起庆祝圣诞节和新年！享受由厨师 Cecy 和我们 #PancakeChristmas 活动的获胜者制作的美妙 NFT。",
   "Chain Head Block": "链头区块",
   "Latest Subgraph Block": "最新子图区块",
@@ -1453,7 +1453,7 @@
   "Old Farms": "旧农场",
   "Please note that this is the old BTT token, which has been swapped to the new BTT tokens in the following ratio:": "请注意，这是旧 BTT 代币，已按以下比例兑换成新 BTT 代币：",
   "This pool was misconfigured. Please unstake your tokens from it, emergencyWithdraw method will be used. Your tokens will be returned to your wallet, however rewards will not be harvested.": "此糖浆池配置错误。请从中取消质押您的代币，将使用 emergencyWithdraw 方法。您的代币将退回您的钱包，但不会收割奖励。",
-  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal.": "对于不公开销售，每个符合条件的参与者将能够提交任意数量的 CAKE，直至最大提交限额，该限额与 IFO 投票提案一起发布。",
+  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal.": "对于不公开销售，每个符合条件的参与者将能够提交任意数量的 CAKE，直至最大提交限额，该限额与 ISPO 投票提案一起发布。",
   "Meet any one of the following requirements to be eligible.": "满足以下任何一项要求即可获得资格。",
   "You are eligible to participate in this Private Sale!": "您有资格参与此不公开销售！",
   "Meet any one of the requirements to join:": "满足任何一项要求即可加入：",
@@ -1468,9 +1468,9 @@
   "Eligible NFT avatar found!": "找到符合条件的 NFT 头像！",
   "The maximum amount of CAKE you can commit to the Public Sale equals the number of your iCAKE. Lock more CAKE for longer durations to increase the maximum CAKE you can commit to the sale.": "您可以提交至公开销售的最大 CAKE 金额等于您的 iCAKE 数量。 锁定更多 CAKE 以延长持续时间，增加您可以提交至销售的最大 CAKE。",
   "What’s the difference between a Public Sale and Private Sale?": "公开销售和不公开销售有什么区别？",
-  "In the current IFO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the IFO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal. The Private Sale has no participation fee.": "在当前的 IFO 形式下，有一个全新的不公开销售。要参与，参与者必须满足 IFO 卡上的某些要求。每个符合条件的参与者将能够提交任意数量的 CAKE，直至最大提交限额，该限额与 IFO 投票提案一起发布。不公开销售不收取参与费用。",
+  "In the current ISPO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the ISPO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal. The Private Sale has no participation fee.": "在当前的 ISPO 形式下，有一个全新的不公开销售。要参与，参与者必须满足 ISPO 卡上的某些要求。每个符合条件的参与者将能够提交任意数量的 CAKE，直至最大提交限额，该限额与 ISPO 投票提案一起发布。不公开销售不收取参与费用。",
   "You can choose one or both at the same time!": "您可以同时选择一个或两个！",
-  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of IFO tokens.": "我们建议您先检查您是否有资格参与不公开销售。在公开销售中，如果您提交的金额太小，您可能不会收到有意义金额的 IFO 代币。",
+  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of ISPO tokens.": "我们建议您先检查您是否有资格参与不公开销售。在公开销售中，如果您提交的金额太小，您可能不会收到有意义金额的 ISPO 代币。",
   "Just remember you need an active PancakeSwap Profile in order to participate.": "请记住，您需要一个有效的 PancakeSwap 个人资料才能参与。",
   "There’s only a participation fee for the Public Sale: there’s no fee for the Private Sale.": "只有公开销售收取参与费用：不公开销售没有费用。",
   "How to Take Part in the Public Sale": "如何参与公开销售",
@@ -1568,8 +1568,8 @@
   "I acknowledge that:": "我确认：",
   "I understand that small orders are executed at higher execution price due to gas fees.": "我了解由于 gas 费用，小订单将以更高的执行价格执行。",
   "I understand that using taxed tokens on limit orders is highly discouraged and not recommended - Taxed tokens can be stuck in limit orders and lost forever because of impossibility to execute an order for such tokens": "我了解强烈建议不要在限价订单上使用征税代币，也不推荐 – 征税代币可能会卡在限价订单中并永远丢失，因为无法执行此类代币的订单",
-  "Apply to run an IFO!": "申请运行 IFO！",
-  "Follow our social channels to learn more about the next IFO.": "关注我们的社交频道以详细了解下一次 IFO。",
+  "Apply to run an ISPO!": "申请运行 ISPO！",
+  "Follow our social channels to learn more about the next ISPO.": "关注我们的社交频道以详细了解下一次 ISPO。",
   "Performance fee only applies to the flexible staking rewards.": "表现费用仅适用于灵活质押奖励。",
   "Total locked": "已锁定总计",
   "What’s the difference?": "有何区别？",
@@ -1642,7 +1642,7 @@
   "Token Vesting": "代币授权",
   "You have tokens available for claiming now!": "您现在有可以领取的代币！",
   "You have no tokens available for claiming": "您没有可以领取的代币",
-  "Participate in our next IFO. and remember to lock your CAKE to increase your allocation!": "参加我们的下一个 IFO，并记得锁定 CAKE 以增加您的分配！",
+  "Participate in our next ISPO. and remember to lock your CAKE to increase your allocation!": "参加我们的下一个 ISPO，并记得锁定 CAKE 以增加您的分配！",
   "Released": "已释放",
   "Vested": "已授权",
   "You will be able to withdraw the staked CAKE and profit only when the staking position is unlocked": "只有在质押头寸解锁时，您才能提取质押的 CAKE 并获利。",
@@ -1660,7 +1660,7 @@
   "The price of token prizes ($CAKE and $DAR) in USD will be determined as per their BUSD pair price during the tally period.": "以美元计价的代币奖金（$CAKE 和 $DAR）的价格将根据其在计分期间的 BUSD 对价格确定。",
   "Eligible pairs: DAR/BNB, CAKE/BNB, and CAKE/BUSD. Please note that the volume from limit orders will not be indexed.": "符合条件的货币对：DAR/BNB、CAKE/BNB 和 CAKE/BUSD。请注意，限价订单的交易量不会被索引。",
   "iCAKE": "iCAKE",
-  "Missed this IFO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "错过了此 IFO？如果您的锁定质押头寸未解锁，您将在未来的 IFO 中享受相同数量的 CAKE。",
+  "Missed this ISPO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "错过了此 ISPO？如果您的锁定质押头寸未解锁，您将在未来的 ISPO 中享受相同数量的 CAKE。",
   "The number of iCAKE equals the locked staking amount if the staking duration is longer than %weeks% weeks. If the staking duration is less than %weeks% weeks, it will linearly decrease based on the staking duration.": "如果质押持续时间超过 %weeks% 周，则 iCAKE 的数量等于锁定的质押数量。如果质押持续时间小于 %weeks% 周，iCAKE 的数量将根据质押持续时间线性减少。",
   "Go to CAKE pool": "转到 CAKE 糖浆池",
   "April": "4 月",
@@ -1684,7 +1684,7 @@
   "Lock more CAKE for longer durations to increase the maximum number of CAKE you can commit to the sale.": "锁定更多 CAKE 以延长持续时间，以增加您可以提交至销售的最大 CAKE 数量。",
   "No vesting token to claim.": "没有可以领取的授权代币。",
   "You have claimed all available token.": "您已领取所有可用代币。",
-  "View IFO": "查看 IFO",
+  "View ISPO": "查看 ISPO",
   "Your DAR volume rank": "您的 DAR 交易量排名",
   "Based on your DAR/BNB trading": "基于您的 DAR/BNB 交易",
   "Now": "现在",
@@ -1747,11 +1747,11 @@
   "For the unlimited sale, Max CAKE entry is capped by your average CAKE balance in the iCake. To increase the max entry, Stake more CAKE into the iCake": "对于无限销售，最大 CAKE 输入的上限为您在 iCake 中的平均 CAKE 余额。要增加最大输入，请在 iCake 中质押更多 CAKE",
   "In the Public Sale, everyone with an active PancakeSwap profile can commit. However the maximum amount of CAKE users can commit, is equal to the number of iCAKE they have.": "在公开销售中，拥有有效 PancakeSwap 个人资料的每个人都可以提交。不过，CAKE 用户可以提交的最大数量等于他们拥有的 iCAKE 数量。",
   "And there’s a fee for participation: see below.": "并且存在参与费用：见下文。",
-  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the IFO.": "参与费用呈阶梯式下降，具体取决于 IFO 的“公开销售”部分中溢出的百分比。",
-  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the IFO proposal (vote) for the specifics of the IFO you want to take part in.": "注意：不同 IFO 的费用可能会有所不同。如需详细了解参与费用，请参阅 IFO 提案（投票）中的详细信息，了解您想参与的 IFO 的具体情况。",
-  "This IFO has token vesting. Purchased tokens are released over a period of time.": "此 IFO 具有代币授权。购买的代币会在一段时间内释放。",
+  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the ISPO.": "参与费用呈阶梯式下降，具体取决于 ISPO 的“公开销售”部分中溢出的百分比。",
+  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the ISPO proposal (vote) for the specifics of the ISPO you want to take part in.": "注意：不同 ISPO 的费用可能会有所不同。如需详细了解参与费用，请参阅 ISPO 提案（投票）中的详细信息，了解您想参与的 ISPO 的具体情况。",
+  "This ISPO has token vesting. Purchased tokens are released over a period of time.": "此 ISPO 具有代币授权。购买的代币会在一段时间内释放。",
   "Learn more in the vote proposal": "在投票提案中了解详情",
-  "If you don’t commit enough CAKE, you may not receive a meaningful amount of IFO tokens, or you may not receive any IFO tokens at all.": "如果您没有提交足够的 CAKE，您可能不会收到有意义数量的 IFO 代币，或者您可能根本不会收到任何 IFO 代币。",
+  "If you don’t commit enough CAKE, you may not receive a meaningful amount of ISPO tokens, or you may not receive any ISPO tokens at all.": "如果您没有提交足够的 CAKE，您可能不会收到有意义数量的 ISPO 代币，或者您可能根本不会收到任何 ISPO 代币。",
   "~%num% available to claim at sales end": "销售结束时大约可以领取 %num%",
   "Vested percentage:": "授权百分比：",
   "Vesting schedule:": "授权时间表：",
@@ -1772,7 +1772,7 @@
   "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.": "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.",
   "Zap allows you to add liquidity with only 1 single token. Click": "借助 Zap 功能，您可以仅使用 1 种代币增加流动性。点击",
   "to try.": "以尝试。",
-  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when IFO ends.": "%percentageVested%% 的购买代币将在一段时间内以线性方式授权和释放。%percentageTgeRelease%% 的购买代币将在 IFO 结束时立即释放并可供领取。",
+  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when ISPO ends.": "%percentageVested%% 的购买代币将在一段时间内以线性方式授权和释放。%percentageTgeRelease%% 的购买代币将在 ISPO 结束时立即释放并可供领取。",
   "The vested tokens will be released linearly over a period of %weeks% weeks.": "授权代币将在 %weeks% 周的期间内以线性方式释放。",
   "Select a Network": "选择网络",
   "LP Rewards APR": "LP Rewards APR",
