--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -29,7 +29,7 @@
   "I understand": "我明白",
   "Claim prizes": "領取獎金",
   "Enable CAKE": "啟用 CAKE",
-  "IFO: Initial Farm Offerings": "IFO：首次挖礦發行",
+  "ISPO: Initial Farm Offerings": "ISPO：首次挖礦發行",
   "Buy new tokens launching on BNB Smart Chain": "購買在幣安智能鏈上發起的新代幣",
   "Community": "社群",
   "Core": "核心",
@@ -49,7 +49,7 @@
   "Pools": "資金池",
   "NFT": "NFT",
   "Info": "資訊",
-  "IFO": "IFO",
+  "ISPO": "ISPO",
   "More": "更多",
   "Liquidity": "流動性",
   "Overview": "概覽",
@@ -144,7 +144,7 @@
   "Your Score": "您的分數",
   "Enable": "啟用",
   "Enabling": "正在啟用中",
-  "IFO Shopper: %title%": "IFO 購買者：%title%",
+  "ISPO Shopper: %title%": "ISPO 購買者：%title%",
   "%num% of total": "總值的 %num%",
   "All estimated rates take into account this pool’s %fee%% performance fee": "所有預估匯率均已考慮此資金池 %fee%% 的表現費用",
   "Sorry, you didn’t contribute enough CAKE to meet the minimum threshold. You didn’t buy anything in this sale, but you can still reclaim your CAKE.": "抱歉，您所貢獻的 CAKE 未能滿足最低閾值。您在此銷售中未進行任何購買，但您仍可以收回您的 CAKE。",
@@ -198,12 +198,12 @@
   "Max. token entry": "最大代幣輸入",
   "Max. CAKE entry": "最大 CAKE 輸入",
   "Activate your Profile": "啟用您的個人檔案",
-  "You’ll need an active PancakeSwap Profile to take part in an IFO!": "您需要有效的 Pancakeswap 個人檔案才能參與 IFO！",
+  "You’ll need an active PancakeSwap Profile to take part in an ISPO!": "您需要有效的 Pancakeswap 個人檔案才能參與 ISPO！",
   "Profile Active!": "個人檔案有效！",
   "Commit CAKE": "提交 CAKE",
-  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to IFO sales. You will need a separate amount of CAKE in your wallet balance to commit to the IFO sales.": "請注意：鎖倉中的 CAKE 無法參與 IFO，您需要準備額外的 CAKE 來參加銷售",
+  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to ISPO sales. You will need a separate amount of CAKE in your wallet balance to commit to the ISPO sales.": "請注意：鎖倉中的 CAKE 無法參與 ISPO，您需要準備額外的 CAKE 來參加銷售",
   "Claim your tokens and achievement": "領取您的代幣和成就",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "在 IFO 銷售完成後，您可以領取您購買的任何 IFO 代幣，任何未花費的 CAKE 代幣都將退回您的錢包。",
+  "After the ISPO sales finish, you can claim any ISPO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "在 ISPO 銷售完成後，您可以領取您購買的任何 ISPO 代幣，任何未花費的 CAKE 代幣都將退回您的錢包。",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "本回合的最後一筆交易已經提交至區塊鏈，正在等待確認。",
   "No prediction history available": "無可用的預測歷程記錄",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "如果您確定應該在此處檢查歷程記錄，請確保您已連線到正確的錢包，然後再試一次。",
@@ -256,13 +256,13 @@
   "Funds to raise:": "要籌集的資金：",
   "Price per %symbol%:": "每個 %symbol% 的價格：",
   "Price per %symbol% with fee:": "每個 %symbol% 的價格和費用：",
-  "You need an active PancakeSwap Profile to take part in an IFO!": "您需要有效的 PancakeSwap 個人檔案才能參與 IFO！",
+  "You need an active PancakeSwap Profile to take part in an ISPO!": "您需要有效的 PancakeSwap 個人檔案才能參與 ISPO！",
   "Achievement": "成就",
   "Which sale should I commit to? Can I do both?": "我應該參與哪種銷售？我可以同時參與兩者嗎？",
   "How much is the participation fee?": "參與費用是多少？",
   "Where does the participation fee go?": "參與費用會去哪了？",
   "The CAKE from the participation fee will be burnt as part of the weekly token burn.": "參與費用中的 CAKE 將作為每週代幣銷毀的一部分而銷毀。",
-  "How can I get an achievement for participating in the IFO?": "如何獲得參與 IFO 的成就？",
+  "How can I get an achievement for participating in the ISPO?": "如何獲得參與 ISPO 的成就？",
   "You need to contribute a minimum of about 10 USD worth of CAKE to either sale.": "您需要為任一種銷售貢獻價值至少為約 10 美元的 CAKE。",
   "Contract Enabled": "合約已啟用",
   "You can now stake in the %symbol% vault!": "您現在可以在 %symbol% 保險庫中進行質押了！",
@@ -454,7 +454,7 @@
   "Please authorize to access your account": "請授權存取您的帳戶",
   "Unable to find connector": "無法找到連接器",
   "The connector config is wrong": "連接器設定錯誤",
-  "You have contributed %amount% CAKE to this IFO!": "您已經為此 IFO 貢獻 %amount% CAKE！",
+  "You have contributed %amount% CAKE to this ISPO!": "您已經為此 ISPO 貢獻 %amount% CAKE！",
   "Your %symbol% committed": "您的 %symbol% 已提交",
   "Your %symbol% RECLAIMED": "您的 %symbol% 已收回",
   "Your %symbol% TO RECLAIM": "您的 %symbol% 待收回",
@@ -493,12 +493,12 @@
   "Contact": "聯絡",
   "The higher your team’s rank, the better your prizes!": "團隊排名越高，獎金就越多！",
   "Get Ready": "準備好",
-  "Activate PancakeSwap Profile to take part in next IFO‘s!": "啟動 PancakeSwap 個人檔案，以便參加下一次 IFO 的！",
+  "Activate PancakeSwap Profile to take part in next ISPO‘s!": "啟動 PancakeSwap 個人檔案，以便參加下一次 ISPO 的！",
   "Trading Battle": "交易大戰",
   "Prediction": "預測",
-  "Initial Farm Offering": "首次挖礦發行",
+  "Initial Staking Pool Offering": "首次挖礦發行",
   "Successfully Enabled!": "已成功啟用！",
-  "You can now participate in the %symbol% IFO.": "您現在可以參與 %symbol% IFO 了。",
+  "You can now participate in the %symbol% ISPO.": "您現在可以參與 %symbol% ISPO 了。",
   "Team Ranks": "團隊排名",
   "Prizes": "獎金",
   "Rules": "規則",
@@ -1350,7 +1350,7 @@
   "Supply Count": "供應數量",
   "Brand": "品牌",
   "Success": "成功",
-  "Go to IFO": "前往 IFO",
+  "Go to ISPO": "前往 ISPO",
   "Phishing warning: ": "釣魚警告： ",
   "please make sure you're visiting https://pancakeswap.finance - check the URL carefully.": "請確保您造訪的是 https://pancakeswap.finance；請仔細檢查網址。",
   "No bids yet": "還沒有出價",
@@ -1361,7 +1361,7 @@
   "You can swap WBNB for BNB (and vice versa) with no trading fees.": "您可以將 WBNB 交換為 BNB (反之亦然)，無需任何交易費用。",
   "Exchange rate is always 1 to 1.": "匯率始終為 1:1。",
   "You can contribute to one or both, it doesn’t matter: only your overall contribution is counted for the achievement.": "您可以為一種或兩種銷售做出貢獻，但這無關緊要。採計成就時只會考慮您的總體貢獻。",
-  "You’ll need %symbol% tokens to participate in the IFO!": "您需要 %symbol% 代幣才能參與 IFO！",
+  "You’ll need %symbol% tokens to participate in the ISPO!": "您需要 %symbol% 代幣才能參與 ISPO！",
   "Get %symbol%, or make sure your tokens aren’t staked somewhere else.": "取得 %symbol%，或確保沒有在其他地方質押您的代幣。",
   "Refresh": "重新整理",
   "Basic": "基礎",
@@ -1370,23 +1370,23 @@
   "Sign up for battle and you’re guaranteed a prize!": "報名參加戰鬥，保證有獎金！",
   "Compete with other teams for the highest trading volume!": "與其他團隊競爭最高交易量！",
   "Trading Competition": "交易大賽",
-  "To participate in the next IFO, lock some CAKE in the fixed-term staking CAKE pool!": "要參與下一個 IFO，請在定期質押 CAKE 資金池中鎖定一些 CAKE！",
+  "To participate in the next ISPO, lock some CAKE in the fixed-term staking CAKE pool!": "要參與下一個 ISPO，請在定期質押 CAKE 資金池中鎖定一些 CAKE！",
   "Lock CAKE in the CAKE pool": "在 CAKE 資金池中鎖定 CAKE",
   "How does the number of iCAKE calculated?": "iCAKE 數量是如何計算的？",
   "Learn more about iCAKE": "詳細瞭解 iCAKE",
   "For the basic sale, Max CAKE entry is capped by minimum between your average CAKE balance in the iCAKE, or the pool’s hard cap. To increase the max entry, Stake more CAKE into the iCAKE": "對於基礎銷售，最大 CAKE 輸入的上限為您在 iCAKE 中的平均 CAKE 餘額和資金池的硬上限這兩者中的較小值。要增加最大輸入，可在 iCAKE 中質押更多 CAKE",
-  "You don’t have any iCAKE available for IFO public sale.": "您沒有任何可用於 IFO 公開銷售的 iCAKE。",
+  "You don’t have any iCAKE available for ISPO public sale.": "您沒有任何可用於 ISPO 公開銷售的 iCAKE。",
   "Sale Finished!": "銷售已完成！",
   "Start in": "開始時間倒數計時：",
   "Exceeded max CAKE entry": "超出最大 CAKE 輸入",
   "Only applies within %num% days of staking. Unstaking after %num% days will not include a fee. Timer resets every time you stake new CAKE in the pool.": "僅在質押後 %num% 天內適用。%num% 天後取消質押無需收取費用。每當您在資金池中質押新的 CAKE 時，計時器都會重置。",
   "unstaking fee if withdrawn within %num%h": "取消質押費用 (在 %num% 小時內提取)",
   "Earn %asset%": "賺取 %asset%",
-  "IFO Pool": "IFO 資金池",
+  "ISPO Pool": "ISPO 資金池",
   "Chart": "圖表",
   "by": "根據",
   "You’ve successfully claimed tokens back.": "您已成功領取回代幣。",
-  "Stake CAKE to participate in IFOs": "質押 CAKE 以參與 IFO",
+  "Stake CAKE to participate in IFOs": "質押 CAKE 以參與 ISPO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "與我們一起慶祝聖誕節和新年！享受由主廚 Cecy 和我們 #PancakeChristmas 活動的獲勝者製作的美妙 NFT。",
   "Chain Head Block": "鏈頭區塊",
   "Latest Subgraph Block": "最新子圖區塊",
@@ -1453,7 +1453,7 @@
   "Old Farms": "舊農場",
   "Please note that this is the old BTT token, which has been swapped to the new BTT tokens in the following ratio:": "請注意，這是舊的 BTT 代幣，已按以下比例交換成新的 BTT 代幣：",
   "This pool was misconfigured. Please unstake your tokens from it, emergencyWithdraw method will be used. Your tokens will be returned to your wallet, however rewards will not be harvested.": "此資金池設定錯誤。請從中將您的代幣取消質押，系統將採用緊急解除方法。您的代幣將退回您的錢包，但不會收割獎勵。",
-  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal.": "對於非公開銷售，各個符合條件的參與者都將能夠提交任意數量的 CAKE，直至最大提交限額。該限額將與 IFO 投票提案一起發佈。",
+  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal.": "對於非公開銷售，各個符合條件的參與者都將能夠提交任意數量的 CAKE，直至最大提交限額。該限額將與 ISPO 投票提案一起發佈。",
   "Meet any one of the following requirements to be eligible.": "滿足以下任何一項要求即可獲得資格。",
   "You are eligible to participate in this Private Sale!": "您有資格參與此非公開銷售！",
   "Meet any one of the requirements to join:": "滿足任何一項要求即可加入：",
@@ -1468,9 +1468,9 @@
   "Eligible NFT avatar found!": "找到符合條件的 NFT 頭像！",
   "The maximum amount of CAKE you can commit to the Public Sale equals the number of your iCAKE. Lock more CAKE for longer durations to increase the maximum CAKE you can commit to the sale.": "您可以提交至公開銷售的最大 CAKE 金額等於您的 iCAKE 數量。鎖定更多 CAKE 以延長持續時間，增加您可以提交至銷售的最大 CAKE。",
   "What’s the difference between a Public Sale and Private Sale?": "公開銷售和非公開銷售有什麼區別？",
-  "In the current IFO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the IFO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal. The Private Sale has no participation fee.": "在目前的 IFO 形式下，有一個全新的非公開銷售。要參與，參與者必須滿足 IFO 卡上的某些要求。每個符合條件的參與者都將能夠參與任意數量的 CAKE，直至最大參與限額，該限額將與 IFO 投票提案一起發佈。非公開銷售不收取參與費。",
+  "In the current ISPO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the ISPO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal. The Private Sale has no participation fee.": "在目前的 ISPO 形式下，有一個全新的非公開銷售。要參與，參與者必須滿足 ISPO 卡上的某些要求。每個符合條件的參與者都將能夠參與任意數量的 CAKE，直至最大參與限額，該限額將與 ISPO 投票提案一起發佈。非公開銷售不收取參與費。",
   "You can choose one or both at the same time!": "您可以同時選擇一個或兩個！",
-  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of IFO tokens.": "我們建議您先檢查您是否有資格參與非公開銷售。在公開銷售中，如果您參與的金額太小，就可能不會收到金額有意義的 IFO 代幣。",
+  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of ISPO tokens.": "我們建議您先檢查您是否有資格參與非公開銷售。在公開銷售中，如果您參與的金額太小，就可能不會收到金額有意義的 ISPO 代幣。",
   "Just remember you need an active PancakeSwap Profile in order to participate.": "請記住，您需要有效的 PancakeSwap 個人檔案才能參與。",
   "There’s only a participation fee for the Public Sale: there’s no fee for the Private Sale.": "只有公開銷售收取參與費用：非公開銷售沒有費用。",
   "How to Take Part in the Public Sale": "如何參與公開銷售",
@@ -1568,8 +1568,8 @@
   "I acknowledge that:": "我確認：",
   "I understand that small orders are executed at higher execution price due to gas fees.": "我瞭解由於 gas 費用，小訂單將以更高的執行價格執行。",
   "I understand that using taxed tokens on limit orders is highly discouraged and not recommended - Taxed tokens can be stuck in limit orders and lost forever because of impossibility to execute an order for such tokens": "我瞭解在限價訂單上使用徵稅代幣是極不受到鼓勵或推薦的行為 – 徵稅代幣可能會卡在限價訂單中並永遠遺失，因為此類代幣的訂單無法執行",
-  "Apply to run an IFO!": "申請執行 IFO！",
-  "Follow our social channels to learn more about the next IFO.": "關注我們的社交頻道以便詳細瞭解下一次 IFO。",
+  "Apply to run an ISPO!": "申請執行 ISPO！",
+  "Follow our social channels to learn more about the next ISPO.": "關注我們的社交頻道以便詳細瞭解下一次 ISPO。",
   "Performance fee only applies to the flexible staking rewards.": "表現費用僅適用於靈活質押的獎勵。",
   "Total locked": "已鎖定總計",
   "What’s the difference?": "有何區別？",
@@ -1642,7 +1642,7 @@
   "Token Vesting": "代幣線性釋放",
   "You have tokens available for claiming now!": "您現在有可以領取的代幣！",
   "You have no tokens available for claiming": "您沒有可以領取的代幣",
-  "Participate in our next IFO. and remember to lock your CAKE to increase your allocation!": "參加我們的下一個 IFO，並記得鎖定 CAKE 以增加您的指派！",
+  "Participate in our next ISPO. and remember to lock your CAKE to increase your allocation!": "參加我們的下一個 ISPO，並記得鎖定 CAKE 以增加您的指派！",
   "Released": "已釋放",
   "Vested": "待釋放",
   "You will be able to withdraw the staked CAKE and profit only when the staking position is unlocked": "只有在質押部位解鎖時，您才能提取質押的 CAKE 並獲利。",
@@ -1660,7 +1660,7 @@
   "The price of token prizes ($CAKE and $DAR) in USD will be determined as per their BUSD pair price during the tally period.": "以美元計價的代幣獎金 ($CAKE 和 $DAR) 的價格將根據其在計分期間的 BUSD 對價格確定。",
   "Eligible pairs: DAR/BNB, CAKE/BNB, and CAKE/BUSD. Please note that the volume from limit orders will not be indexed.": "符合條件的貨幣對：DAR/BNB、CAKE/BNB 和 CAKE/BUSD。請注意，不會為限價訂單的交易量編撰索引。",
   "iCAKE": "iCAKE",
-  "Missed this IFO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "錯過了此 IFO？如果您鎖定的質押部位未解鎖，您將在未來的 IFO 中享受相同數量的 CAKE。",
+  "Missed this ISPO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "錯過了此 ISPO？如果您鎖定的質押部位未解鎖，您將在未來的 ISPO 中享受相同數量的 CAKE。",
   "The number of iCAKE equals the locked staking amount if the staking duration is longer than %weeks% weeks. If the staking duration is less than %weeks% weeks, it will linearly decrease based on the staking duration.": "如果質押持續時間超過 %weeks% 周，則 iCAKE 的數量等於鎖定的質押數量。如果質押持續時間小於 %weeks% 周，iCAKE 的數量將根據質押持續時間線性減少。",
   "Go to CAKE pool": "前往 CAKE 資金池",
   "April": "4 月",
@@ -1684,7 +1684,7 @@
   "Lock more CAKE for longer durations to increase the maximum number of CAKE you can commit to the sale.": "鎖定更多 CAKE 以延長持續時間，以增加您可以提交至銷售的最大 CAKE 數量。",
   "No vesting token to claim.": "沒有可以領取的授權代幣。",
   "You have claimed all available token.": "您已領取所有可用代幣。",
-  "View IFO": "檢視 IFO",
+  "View ISPO": "檢視 ISPO",
   "Your DAR volume rank": "您的 DAR 交易量排名",
   "Based on your DAR/BNB trading": "以您的 DAR/BNB 交易為基礎",
   "Now": "現在",
@@ -1747,11 +1747,11 @@
   "For the unlimited sale, Max CAKE entry is capped by your average CAKE balance in the iCake. To increase the max entry, Stake more CAKE into the iCake": "對於無限銷售，最大 CAKE 輸入的上限為您在 iCAKE 中的平均 CAKE 餘額。要增加最大輸入，可在 iCAKE 中質押更多 CAKE",
   "In the Public Sale, everyone with an active PancakeSwap profile can commit. However the maximum amount of CAKE users can commit, is equal to the number of iCAKE they have.": "在公開銷售中，擁有有效 PancakeSwap 個人檔案的每個人都可以提交。不過，CAKE 使用者可以提交的最大數量等於他們擁有的 iCAKE 數量。",
   "And there’s a fee for participation: see below.": "並且存在參與費用：見下文。",
-  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the IFO.": "參與費用呈階梯式下降，具體取決於 IFO 的「公開銷售」部分中溢出的百分比。",
-  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the IFO proposal (vote) for the specifics of the IFO you want to take part in.": "注意：不同 IFO 的費用可能會有所不同。如需詳細瞭解參與費用，請參閱 IFO 提案 (投票) 中的詳細資料，瞭解您想參與的 IFO 的具體情況。",
-  "This IFO has token vesting. Purchased tokens are released over a period of time.": "此 IFO 具有代幣授權。購買的代幣會在一段時間內釋放。",
+  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the ISPO.": "參與費用呈階梯式下降，具體取決於 ISPO 的「公開銷售」部分中溢出的百分比。",
+  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the ISPO proposal (vote) for the specifics of the ISPO you want to take part in.": "注意：不同 ISPO 的費用可能會有所不同。如需詳細瞭解參與費用，請參閱 ISPO 提案 (投票) 中的詳細資料，瞭解您想參與的 ISPO 的具體情況。",
+  "This ISPO has token vesting. Purchased tokens are released over a period of time.": "此 ISPO 具有代幣授權。購買的代幣會在一段時間內釋放。",
   "Learn more in the vote proposal": "在投票提案中瞭解詳情",
-  "If you don’t commit enough CAKE, you may not receive a meaningful amount of IFO tokens, or you may not receive any IFO tokens at all.": "如果您沒有提交足夠的 CAKE，您可能不會收到有意義數量的 IFO 代幣，或者您可能根本不會收到任何 IFO 代幣。",
+  "If you don’t commit enough CAKE, you may not receive a meaningful amount of ISPO tokens, or you may not receive any ISPO tokens at all.": "如果您沒有提交足夠的 CAKE，您可能不會收到有意義數量的 ISPO 代幣，或者您可能根本不會收到任何 ISPO 代幣。",
   "~%num% available to claim at sales end": "銷售結束時大約可以領取 %num%",
   "Vested percentage:": "授權百分比：",
   "Vesting schedule:": "授權時間表：",
@@ -1773,7 +1773,7 @@
   "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.": "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.",
   "Zap allows you to add liquidity with only 1 single token. Click": "借助 Zap 功能，您可以僅使用 1 種代幣來增加流動性。按一下",
   "to try.": "試試。",
-  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when IFO ends.": "%percentageVested%% 的購買代幣將在一段時間內線性授權與釋放。%percentageTgeRelease%% 的購買代幣將在 IFO 結束時立即釋放並可供領取。",
+  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when ISPO ends.": "%percentageVested%% 的購買代幣將在一段時間內線性授權與釋放。%percentageTgeRelease%% 的購買代幣將在 ISPO 結束時立即釋放並可供領取。",
   "Select a Network": "選擇網路",
   "LP Rewards APR": "LP Rewards APR",
   "Limit Orders": "Limit Orders"
