--- a/public/locales/en-AU.json
+++ b/public/locales/en-AU.json
@@ -84,13 +84,13 @@
   "Pending Confirmation": "Pending Confirmation",
   "Approx. time before next lottery start": "Approx. time before next lottery start",
   "Approve CAKE": "Approve CAKE",
-  "IFO: Intitial Farm Offerings": "IFO: Initial Farm Offerings",
+  "ISPO: Intitial Farm Offerings": "ISPO: Initial Farm Offerings",
   "Buy new tokens with a brand new token sale model.": "Buy new tokens with a brand new token sale model.",
   "You’ll pay for the new tokens using CAKE-BNB LP tokens, which means you need to stake equal amounts of CAKE and BNB in a liquidity pool to take part.": "You’ll pay for the new tokens using CAKE-BNB LP tokens, which means you need to stake equal amounts of CAKE and BNB in a liquidity pool to take part.",
   "Get CAKE-BNB LP >": "Get CAKE-BNB LP >",
   "The project gets the BNB, PancakeSwap burns the CAKE.": "The project gets the BNB, PancakeSwap burns the CAKE.",
   "You get the tokens.": "You get the tokens.",
-  "Want to launch your own IFO?": "Want to launch your own IFO?",
+  "Want to launch your own ISPO?": "Want to launch your own ISPO?",
   "Launch your project with PancakeSwap, BNB Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Launch your project with PancakeSwap, BNB Smart Chain’s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.",
   "Apply to launch": "Apply to launch",
   "Community": "Community",
@@ -130,7 +130,7 @@
   "Buy CAKE and BNB tokens": "Buy CAKE and BNB tokens",
   "Get CAKE-BNB LP tokens by adding CAKE and BNB liquidity": "Get CAKE-BNB LP tokens by adding CAKE and BNB liquidity",
   "During Sale": "During Sale",
-  "While the sale is live, commit your CAKE-LP tokens to buy the IFO tokens": "While the sale is live, commit your CAKE-LP tokens to buy the IFO tokens",
+  "While the sale is live, commit your CAKE-LP tokens to buy the ISPO tokens": "While the sale is live, commit your CAKE-LP tokens to buy the ISPO tokens",
   "After Sale": "After Sale",
   "Claim the tokens you bought, along with any unspent funds.": "Claim the tokens you purchased, along with any unspent funds.",
   "Done!": "Done!",
@@ -169,7 +169,7 @@
   "Pools": "Pools",
   "NFT": "NFT",
   "Info": "Info",
-  "IFO": "IFO",
+  "ISPO": "ISPO",
   "More": "More",
   "Liquidity": "Liquidity",
   "Overview": "Overview",
@@ -194,7 +194,7 @@
   "Sorry, no prizes to collect": "Sorry, no prizes to collect",
   "In Wallet": "In Wallet",
   "Loading...": "Loading...",
-  "Next IFO": "Next IFO",
+  "Next ISPO": "Next ISPO",
   "Past IFOs": "Past IFOs",
   "APR": "APR",
   "Select lottery number:": "Select lottery number:",
@@ -321,7 +321,7 @@
   "Enable": "Enable",
   "Enabling": "Enabling",
   "%amount% CAKE": "%amount% CAKE",
-  "IFO Shopper: %title%": "IFO Shopper: %title%",
+  "ISPO Shopper: %title%": "ISPO Shopper: %title%",
   "%num% of total": "%num% of total",
   "All estimated rates take into account this pool's %fee%% performance fee": "All estimated rates take into account this pool's %fee%% performance fee",
   "Sorry, you didn’t contribute enough LP tokens to meet the minimum threshold. You didn’t buy anything in this sale, but you can still reclaim your LP tokens.": "Sorry, you didn’t contribute enough LP tokens to meet the minimum threshold. You didn’t buy anything in this sale, but you can still reclaim your LP tokens.",
