--- a/public/locales/ja-JP.json
+++ b/public/locales/ja-JP.json
@@ -29,7 +29,7 @@
   "I understand": "分かりました",
   "Claim prizes": "賞金の請求",
   "Enable CAKE": "CAKEを有効にする",
-  "IFO: Initial Farm Offerings": "IFO: イニシャルファームオファリング",
+  "ISPO: Initial Farm Offerings": "ISPO: イニシャルファームオファリング",
   "Buy new tokens launching on BNB Smart Chain": "BNB Smart Chainでローンチする新しいトークンを購入",
   "Community": "コミュニティ",
   "Core": "コア",
@@ -49,7 +49,7 @@
   "Pools": "プール",
   "NFT": "NFT",
   "Info": "情報",
-  "IFO": "IFO",
+  "ISPO": "ISPO",
   "More": "その他",
   "Liquidity": "流動性",
   "Overview": "概要",
@@ -144,7 +144,7 @@
   "Your Score": "あなたのスコア",
   "Enable": "有効にする",
   "Enabling": "有効化中",
-  "IFO Shopper: %title%": "IFOショッパー: %title%",
+  "ISPO Shopper: %title%": "IFOショッパー: %title%",
   "%num% of total": "%num%/合計",
   "All estimated rates take into account this pool’s %fee%% performance fee": "すべての推定レートでは、このプールの%fee%%のパフォーマンス手数料が考慮されます",
   "Sorry, you didn’t contribute enough CAKE to meet the minimum threshold. You didn’t buy anything in this sale, but you can still reclaim your CAKE.": "申し訳ありません。最低しきい値を満たすCAKE数が投資されていません。この販売では何も購入しませんでしたが、それでもCAKEを回収することは可能です。",
@@ -198,12 +198,12 @@
   "Max. token entry": "最大トークンエントリー数",
   "Max. CAKE entry": "最大CAKEエントリー",
   "Activate your Profile": "プロファイルを有効化",
-  "You’ll need an active PancakeSwap Profile to take part in an IFO!": "IFOに参加するには、アクティブなPancakeSwapのプロファイルが必要です！",
+  "You’ll need an active PancakeSwap Profile to take part in an ISPO!": "IFOに参加するには、アクティブなPancakeSwapのプロファイルが必要です！",
   "Profile Active!": "プロファイルが有効です！",
   "Commit CAKE": "CAKEを投資",
-  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to IFO sales. You will need a separate amount of CAKE in your wallet balance to commit to the IFO sales.": "定期ステーキングポジションのCAKEはロックされたままとなり、IFO販売への投資には使用できないことにご注意ください。IFO販売に投資するには、ウォレットの残高に別途CAKEが必要となります。",
+  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to ISPO sales. You will need a separate amount of CAKE in your wallet balance to commit to the ISPO sales.": "定期ステーキングポジションのCAKEはロックされたままとなり、IFO販売への投資には使用できないことにご注意ください。IFO販売に投資するには、ウォレットの残高に別途CAKEが必要となります。",
   "Claim your tokens and achievement": "トークンと実績を請求",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "IFO販売が終了すると、あなたが購入したIFOトークンを請求できます。未使用のCAKEトークンはあなたのウォレットに戻されます。",
+  "After the ISPO sales finish, you can claim any ISPO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "IFO販売が終了すると、あなたが購入したIFOトークンを請求できます。未使用のCAKEトークンはあなたのウォレットに戻されます。",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "このラウンドの最後の取引はブロックチェーンに提出され、確定待ち状態です。",
   "No prediction history available": "プレディクション参加履歴がありません",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "ここに表示されるべき履歴が表示されない場合は、正しいウォレットに接続しているかどうかを確認してからもう一度お試しください。",
@@ -256,13 +256,13 @@
   "Funds to raise:": "調達する資金:",
   "Price per %symbol%:": "%symbol%あたりの価格:",
   "Price per %symbol% with fee:": "%symbol%当たりの価格（手数料込み）:",
-  "You need an active PancakeSwap Profile to take part in an IFO!": "IFOに参加するには、アクティブなPancakeSwapのプロファイルが必要です！",
+  "You need an active PancakeSwap Profile to take part in an ISPO!": "IFOに参加するには、アクティブなPancakeSwapのプロファイルが必要です！",
   "Achievement": "実績",
   "Which sale should I commit to? Can I do both?": "どちらの販売に投資したほうがいいですか？両方に投資することも可能ですか？",
   "How much is the participation fee?": "参加手数料はいくらですか？",
   "Where does the participation fee go?": "参加手数料は何に使われますか？",
   "The CAKE from the participation fee will be burnt as part of the weekly token burn.": "参加手数料のCAKEは毎週のトークンバーンの一環としてバーンされます。",
-  "How can I get an achievement for participating in the IFO?": "IFOに参加した実績をどうすれば手に入れることができますか？",
+  "How can I get an achievement for participating in the ISPO?": "IFOに参加した実績をどうすれば手に入れることができますか？",
   "You need to contribute a minimum of about 10 USD worth of CAKE to either sale.": "いずれかの販売に10ドルのCAKEを投資する必要があります。",
   "Contract Enabled": "スマートコントラクトが有効化されました",
   "You can now stake in the %symbol% vault!": "%symbol% vaultにステーキングできるようなりました！",
@@ -454,7 +454,7 @@
   "Please authorize to access your account": "アカウントにアクセスするには承認してください",
   "Unable to find connector": "コネクターが見つかりませんでした",
   "The connector config is wrong": "コネクター設定が間違っています",
-  "You have contributed %amount% CAKE to this IFO!": "このIFOに%amount% CAKEを投資しました！",
+  "You have contributed %amount% CAKE to this ISPO!": "このIFOに%amount% CAKEを投資しました！",
   "Your %symbol% committed": "投資している%symbol%",
   "Your %symbol% RECLAIMED": "返金している%symbol%",
   "Your %symbol% TO RECLAIM": "返金の対象である%symbol%",
@@ -493,12 +493,12 @@
   "Contact": "お問い合わせ",
   "The higher your team’s rank, the better your prizes!": "チームのランクが高いほど、より優れた賞金を獲得できます！",
   "Get Ready": "準備しよう",
-  "Activate PancakeSwap Profile to take part in next IFO‘s!": "次のIFOに参加するには、PancakeSwapプロファイルを有効化しよう！",
+  "Activate PancakeSwap Profile to take part in next ISPO‘s!": "次のIFOに参加するには、PancakeSwapプロファイルを有効化しよう！",
   "Trading Battle": "取引バトル",
   "Prediction": "プレディクション",
-  "Initial Farm Offering": "イニシャルファームオファリング",
+  "Initial Staking Pool Offering": "イニシャルファームオファリング",
   "Successfully Enabled!": "正常に有効化されました！",
-  "You can now participate in the %symbol% IFO.": "%symbol%のIFOに参加できるようなりました。",
+  "You can now participate in the %symbol% ISPO.": "%symbol%のIFOに参加できるようなりました。",
   "Team Ranks": "チームのランク",
   "Prizes": "賞金",
   "Rules": "ルール",
@@ -1350,7 +1350,7 @@
   "Supply Count": "サプライ数",
   "Brand": "ブランド",
   "Success": "成功",
-  "Go to IFO": "IFOに移動",
+  "Go to ISPO": "IFOに移動",
   "Phishing warning: ": "フィッシング警告: ",
   "please make sure you're visiting https://pancakeswap.finance - check the URL carefully.": "https://pancakeswap.finance にアクセスしていることを必ずご確認ください。URL をよくご確認ください。",
   "No bids yet": "まだ入札はありません",
@@ -1361,7 +1361,7 @@
   "You can swap WBNB for BNB (and vice versa) with no trading fees.": "取引手数料なしでWBNBとBNBをスワップできます。",
   "Exchange rate is always 1 to 1.": "交換レートは常に1対1です。",
   "You can contribute to one or both, it doesn’t matter: only your overall contribution is counted for the achievement.": "片方に投資しても両方に投資しても構いません。実績に考慮されるのはあなたの全体貢献額です。",
-  "You’ll need %symbol% tokens to participate in the IFO!": "IFOに参加するには%symbol%トークンが必要です！",
+  "You’ll need %symbol% tokens to participate in the ISPO!": "IFOに参加するには%symbol%トークンが必要です！",
   "Get %symbol%, or make sure your tokens aren’t staked somewhere else.": "%symbol%を獲得するか、あなたのトークンが別の場所でステーキングされていないことを確認しよう。",
   "Refresh": "更新",
   "Basic": "基本",
@@ -1370,19 +1370,19 @@
   "Sign up for battle and you’re guaranteed a prize!": "バトルに参加するだけで、賞金獲得が保証されます！",
   "Compete with other teams for the highest trading volume!": "ほかのチームと取引量の高さを競いましょう！",
   "Trading Competition": "トレード試合",
-  "To participate in the next IFO, lock some CAKE in the fixed-term staking CAKE pool!": "次のIFOに参加するには、定期ステーキングCAKEプールの一部のCAKEをロックしよう！",
+  "To participate in the next ISPO, lock some CAKE in the fixed-term staking CAKE pool!": "次のIFOに参加するには、定期ステーキングCAKEプールの一部のCAKEをロックしよう！",
   "Lock CAKE in the CAKE pool": "CAKEプールのCAKEをロック",
   "How does the number of iCAKE calculated?": "iCAKE数はどのように計算されますか？",
   "Learn more about iCAKE": "iCAKEについてより詳しく",
   "For the basic sale, Max CAKE entry is capped by minimum between your average CAKE balance in the iCAKE, or the pool’s hard cap. To increase the max entry, Stake more CAKE into the iCAKE": "基本販売においては、最大CAKEエントリーは、iCAKE内の平均CAKE残高またはプールのハードキャップの最低額を上限とします。最大エントリーを増やすには、iCAKEにさらにCAKEをステーキングしてください",
-  "You don’t have any iCAKE available for IFO public sale.": "IFO公開販売に使用できるiCAKEがありません。",
+  "You don’t have any iCAKE available for ISPO public sale.": "IFO公開販売に使用できるiCAKEがありません。",
   "Sale Finished!": "販売終了！",
   "Start in": "開始まで",
   "Exceeded max CAKE entry": "最大CAKEエントリーを超えています",
   "Only applies within %num% days of staking. Unstaking after %num% days will not include a fee. Timer resets every time you stake new CAKE in the pool.": "ステーキングして%num%日以内の場合にしか該当しません。%num%日後にステーキングを解除しても手数料はかかりません。タイマーは、プールに新しいCAKEをステーキングするたびにリセットされます。",
   "unstaking fee if withdrawn within %num%h": "%num%時間以内に出金した場合のステーキング解除の手数料",
   "Earn %asset%": "%asset%を獲得",
-  "IFO Pool": "IFOプール",
+  "ISPO Pool": "IFOプール",
   "Chart": "チャート",
   "by": " ",
   "You’ve successfully claimed tokens back.": "トークンを正常に回収しました。",
@@ -1453,7 +1453,7 @@
   "Old Farms": "古いファーム",
   "Please note that this is the old BTT token, which has been swapped to the new BTT tokens in the following ratio:": "これは古いBTTトークンであることに注意してください。次の比率で新しいBTTトークンにスワップされています:",
   "This pool was misconfigured. Please unstake your tokens from it, emergencyWithdraw method will be used. Your tokens will be returned to your wallet, however rewards will not be harvested.": "このプールの構成は誤っています。プールからトークンをステーク解除してください。emergencyWithdraw手法が使用されます。トークンはウォレットに戻されますが、報酬は収穫されません。",
-  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal.": "非公開販売においては、参加資格のあるユーザーはそれぞれ、最大投資制限まで任意のCAKEを投資できます。これは、IFO投票提案とともに公開されます。",
+  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal.": "非公開販売においては、参加資格のあるユーザーはそれぞれ、最大投資制限まで任意のCAKEを投資できます。これは、IFO投票提案とともに公開されます。",
   "Meet any one of the following requirements to be eligible.": "資格を得るには、次の要件のいずれかを満たします。",
   "You are eligible to participate in this Private Sale!": "この非公開販売に参加する資格があります！",
   "Meet any one of the requirements to join:": "参加するには要件のいずれかを満たします:",
@@ -1468,9 +1468,9 @@
   "Eligible NFT avatar found!": "対象のNFTアバターが見つかりました！",
   "The maximum amount of CAKE you can commit to the Public Sale equals the number of your iCAKE. Lock more CAKE for longer durations to increase the maximum CAKE you can commit to the sale.": "公開販売に投資できるCAKE最大額は、iCAKEと同等です。より長い期間でより多くのCAKEをロックすることで、販売に投資できるCAKE最大額を引き上げることができます。",
   "What’s the difference between a Public Sale and Private Sale?": "公開販売と非公開販売の違いは何ですか？",
-  "In the current IFO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the IFO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal. The Private Sale has no participation fee.": "現在のIFO 形式です。最新の非公開販売があります。参加するには、IFOカードに提示された特定の要件を満たす必要があります。参加資格のあるユーザーはそれぞれ、最大投資制限まで任意のCAKEを投資できます。これは、IFO投票提案とともに公開されます。非公開販売には参加手数料は不要です。",
+  "In the current ISPO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the ISPO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal. The Private Sale has no participation fee.": "現在のIFO 形式です。最新の非公開販売があります。参加するには、IFOカードに提示された特定の要件を満たす必要があります。参加資格のあるユーザーはそれぞれ、最大投資制限まで任意のCAKEを投資できます。これは、IFO投票提案とともに公開されます。非公開販売には参加手数料は不要です。",
   "You can choose one or both at the same time!": "1つまたは両方を同時に選択できます！",
-  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of IFO tokens.": "まず、非公開販売への参加資格を満たすかどうかをチェックすることをお勧めします。公開販売では、投資する量が少なすぎる場合、意味のあるIFOトークンを受け取れない可能性があります。",
+  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of ISPO tokens.": "まず、非公開販売への参加資格を満たすかどうかをチェックすることをお勧めします。公開販売では、投資する量が少なすぎる場合、意味のあるIFOトークンを受け取れない可能性があります。",
   "Just remember you need an active PancakeSwap Profile in order to participate.": "参加するにはアクティブなPancakeSwapプロファイルが必要なことを忘れないでください。",
   "There’s only a participation fee for the Public Sale: there’s no fee for the Private Sale.": "参加手数料は、公開販売にのみ発生します。非公開販売には参加手数料はありません。",
   "How to Take Part in the Public Sale": "公開販売への参加方法",
@@ -1568,8 +1568,8 @@
   "I acknowledge that:": "次の事項に同意します:",
   "I understand that small orders are executed at higher execution price due to gas fees.": "私は、少量注文は、ガス代により、より高い実行価格で実行されることを理解します。",
   "I understand that using taxed tokens on limit orders is highly discouraged and not recommended - Taxed tokens can be stuck in limit orders and lost forever because of impossibility to execute an order for such tokens": "私は、リミット注文に課税トークンを使用することが非常に推奨されないことを理解します。課税トークンは、そのようなトークンに対する注文を実行できないことにより、リミット注文に留まり、永久に失われる可能性があります。",
-  "Apply to run an IFO!": "IFOの実行を申請！",
-  "Follow our social channels to learn more about the next IFO.": "次回のIFOについての詳細は、ソーシャルチャンネルをフォローしてください。",
+  "Apply to run an ISPO!": "IFOの実行を申請！",
+  "Follow our social channels to learn more about the next ISPO.": "次回のIFOについての詳細は、ソーシャルチャンネルをフォローしてください。",
   "Performance fee only applies to the flexible staking rewards.": "パフォーマンス手数料は、フレキシブルステーキング報酬にのみ適用されます。",
   "Total locked": "ロック合計",
   "What’s the difference?": "違いは？",
@@ -1642,7 +1642,7 @@
   "Token Vesting": "トークンべスティング",
   "You have tokens available for claiming now!": "今すぐ回収できるトークンがあります！",
   "You have no tokens available for claiming": "回収できるトークンはありません",
-  "Participate in our next IFO. and remember to lock your CAKE to increase your allocation!": "次のIFOに参加しましょう。配分を高めるために、忘れずにCAKEをロックしましょう！",
+  "Participate in our next ISPO. and remember to lock your CAKE to increase your allocation!": "次のIFOに参加しましょう。配分を高めるために、忘れずにCAKEをロックしましょう！",
   "Released": "解放済み",
   "Vested": "確定済み",
   "You will be able to withdraw the staked CAKE and profit only when the staking position is unlocked": "ステーキングポジションがロック解除されている場合にのみ、ステーキング済みのCAKEを引き出して利益を得ることができます。",
@@ -1660,7 +1660,7 @@
   "The price of token prizes ($CAKE and $DAR) in USD will be determined as per their BUSD pair price during the tally period.": "トークン賞金（$CAKEと$DAR）の賞金USD額は、集計期間中のBUSDペア価格によって決定します。",
   "Eligible pairs: DAR/BNB, CAKE/BNB, and CAKE/BUSD. Please note that the volume from limit orders will not be indexed.": "対象のペア: DAR/BNB、CAKE/BNB、およびCAKE/BUSD。リミット注文のボリュームはインデックスされないことに注意してください。",
   "iCAKE": "iCAKE",
-  "Missed this IFO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "このIFOを逃しましたか？ロックされているステーキングポジションがロック解除されていない場合、今後のIFOで同じ額のiCAKEを利用できます。",
+  "Missed this ISPO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "このIFOを逃しましたか？ロックされているステーキングポジションがロック解除されていない場合、今後のIFOで同じ額のiCAKEを利用できます。",
   "The number of iCAKE equals the locked staking amount if the staking duration is longer than %weeks% weeks. If the staking duration is less than %weeks% weeks, it will linearly decrease based on the staking duration.": "iCAKE数は、ステーキング期間が%weeks%週間を超える場合、ロックされているステーキング額と同等です。ステーキング期間が%weeks%週間を下回る場合、ステーキング期間に基づいて直線的に減少します。",
   "Go to CAKE pool": "CAKEプールに移動",
   "April": "4月",
@@ -1684,7 +1684,7 @@
   "Lock more CAKE for longer durations to increase the maximum number of CAKE you can commit to the sale.": "より長い期間より多くのCAKEをロックすると、販売に投資できるCAKE最大数を引き上げることができます。",
   "No vesting token to claim.": "回収できるべスティングトークンはありません。",
   "You have claimed all available token.": "利用できるすべてのトークンを回収しました。",
-  "View IFO": "IFOを表示",
+  "View ISPO": "IFOを表示",
   "Your DAR volume rank": "あなたのDARボリュームランク",
   "Based on your DAR/BNB trading": "DAR/BNBトレーディングに基づく",
   "Now": "現在",
@@ -1747,11 +1747,11 @@
   "For the unlimited sale, Max CAKE entry is capped by your average CAKE balance in the iCake. To increase the max entry, Stake more CAKE into the iCake": "無制限販売においては、最大CAKEエントリーは、iCAKEの平均CAKE残高を上限とします。最大エントリーを増やすには、iCAKEにさらにCAKEをステーキングしてください",
   "In the Public Sale, everyone with an active PancakeSwap profile can commit. However the maximum amount of CAKE users can commit, is equal to the number of iCAKE they have.": "公開販売では、アクティブなPancakeSwapプロファイルを持つすべてのユーザーが投資できます。ユーザーが投資できるCAKE最大額は、ユーザーが持つiCAKEの数です。",
   "And there’s a fee for participation: see below.": "また、参加手数料があります: 以下をご覧ください。",
-  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the IFO.": "参加手数料は、IFOの「公開販売」部分からのオーバーフローの割合によって段階的に減っていきます。",
-  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the IFO proposal (vote) for the specifics of the IFO you want to take part in.": "注意: 手数料はIFOによって異なります。参加手数料について詳しくは、参加するIFOの特徴に関するIFO提案（投票）の詳細をご覧ください。",
-  "This IFO has token vesting. Purchased tokens are released over a period of time.": "このIFOにはトークンべスティングがあります。購入したトークンは、一定期間公開されます。",
+  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the ISPO.": "参加手数料は、IFOの「公開販売」部分からのオーバーフローの割合によって段階的に減っていきます。",
+  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the ISPO proposal (vote) for the specifics of the ISPO you want to take part in.": "注意: 手数料はIFOによって異なります。参加手数料について詳しくは、参加するIFOの特徴に関するIFO提案（投票）の詳細をご覧ください。",
+  "This ISPO has token vesting. Purchased tokens are released over a period of time.": "このIFOにはトークンべスティングがあります。購入したトークンは、一定期間公開されます。",
   "Learn more in the vote proposal": "投票提案で詳細を見る",
-  "If you don’t commit enough CAKE, you may not receive a meaningful amount of IFO tokens, or you may not receive any IFO tokens at all.": "十分なCAKEを投資しない場合、意味のあるIFOトークン量を受け取れないか、IFOトークンをまったく受け取れない可能性があります。",
+  "If you don’t commit enough CAKE, you may not receive a meaningful amount of ISPO tokens, or you may not receive any ISPO tokens at all.": "十分なCAKEを投資しない場合、意味のあるIFOトークン量を受け取れないか、IFOトークンをまったく受け取れない可能性があります。",
   "~%num% available to claim at sales end": "販売終了時に約%num%を請求可能",
   "Vested percentage:": "べスティング割合:",
   "Vesting schedule:": "べスティング期間:",
@@ -1772,7 +1772,7 @@
   "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.": "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.",
   "Zap allows you to add liquidity with only 1 single token. Click": "Zapを使うと1トークンだけで流動性を追加できます。クリックして",
   "to try.": "お試しください。",
-  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when IFO ends.": "購入したトークンの%percentageVested%%がべスティングされ、一定期間、直線的にリリースされます。購入したトークンの%percentageTgeRelease%%が直ちにリリースされ、IFO終了時に回収できるようになります。",
+  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when ISPO ends.": "購入したトークンの%percentageVested%%がべスティングされ、一定期間、直線的にリリースされます。購入したトークンの%percentageTgeRelease%%が直ちにリリースされ、IFO終了時に回収できるようになります。",
   "The vested tokens will be released linearly over a period of %weeks% weeks.": "べスティングされたトークンは%weeks%週間、直線的にリリースされます。",
   "Select a Network": "ネットワークを選択",
   "LP Rewards APR": "LP Rewards APR",
