--- a/public/locales/ko-KR.json
+++ b/public/locales/ko-KR.json
@@ -29,7 +29,7 @@
   "I understand": "이해함",
   "Claim prizes": "상금 클레임",
   "Enable CAKE": "CAKE 활성화",
-  "IFO: Initial Farm Offerings": "IFO: 초기 팜 오퍼링",
+  "ISPO: Initial Farm Offerings": "ISPO: 초기 팜 오퍼링",
   "Buy new tokens launching on BNB Smart Chain": "BNB Smart Chain에서 출시되는 새로운 토큰 구입",
   "Community": "커뮤니티",
   "Core": "코어",
@@ -49,7 +49,7 @@
   "Pools": "풀",
   "NFT": "NFT",
   "Info": "정보",
-  "IFO": "IFO",
+  "ISPO": "ISPO",
   "More": "자세히",
   "Liquidity": "유동성",
   "Overview": "개요",
@@ -144,7 +144,7 @@
   "Your Score": "내 점수",
   "Enable": "활성화",
   "Enabling": "활성화 중",
-  "IFO Shopper: %title%": "IFO 쇼퍼: %title%",
+  "ISPO Shopper: %title%": "ISPO 쇼퍼: %title%",
   "%num% of total": "합계의 %num%",
   "All estimated rates take into account this pool’s %fee%% performance fee": "모든 예상 비율에는 이 풀의 %fee%% 성과 수수료가 고려됩니다.",
   "Sorry, you didn’t contribute enough CAKE to meet the minimum threshold. You didn’t buy anything in this sale, but you can still reclaim your CAKE.": "죄송합니다. 최소 임계값을 충족하기에 충분한 CAKE를 기부하지 않았습니다. 이 판매에서 구입한 적이 없지만 CAKE를 다시 클레임할 수는 있습니다.",
@@ -198,12 +198,12 @@
   "Max. token entry": "최대 토큰 엔트리",
   "Max. CAKE entry": "최대 CAKE 엔트리",
   "Activate your Profile": "내 프로필 활성화",
-  "You’ll need an active PancakeSwap Profile to take part in an IFO!": "IFO에 참여하려면 PancakeSwap 프로필을 활성화해야 합니다!",
+  "You’ll need an active PancakeSwap Profile to take part in an ISPO!": "IFO에 참여하려면 PancakeSwap 프로필을 활성화해야 합니다!",
   "Profile Active!": "프로필 활성화!",
   "Commit CAKE": "CAKE 커밋",
-  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to IFO sales. You will need a separate amount of CAKE in your wallet balance to commit to the IFO sales.": "고정 기간 예치 포지션의 CAKE는 잠긴 상태로 유지되며 IFO 판매에 커밋하는 데 사용할 수 없습니다. IFO 판매에 커밋하려면 지갑 잔액에 별도 금액의 CAKE가 필요합니다.",
+  "Please note that CAKE in the fixed-term staking positions will remain locked and can not be used for committing to ISPO sales. You will need a separate amount of CAKE in your wallet balance to commit to the ISPO sales.": "고정 기간 예치 포지션의 CAKE는 잠긴 상태로 유지되며 ISPO 판매에 커밋하는 데 사용할 수 없습니다. ISPO 판매에 커밋하려면 지갑 잔액에 별도 금액의 CAKE가 필요합니다.",
   "Claim your tokens and achievement": "토큰 및 성과 클레임",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "IFO 판매가 완료되면, 구입한 IFO 토큰을 클레임할 수 있으며 사용하지 않은 CAKE 토큰은 지갑으로 반환됩니다.",
+  "After the ISPO sales finish, you can claim any ISPO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.": "ISPO 판매가 완료되면, 구입한 ISPO 토큰을 클레임할 수 있으며 사용하지 않은 CAKE 토큰은 지갑으로 반환됩니다.",
   "This round’s closing transaction has been submitted to the blockchain, and is awaiting confirmation.": "이 라운드의 마감 트랜잭션은 블록체인에 제출되어 확인 대기 중입니다.",
   "No prediction history available": "사용 가능한 예측 기록 없음",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "여기에 기록이 표시되어야 하는 경우에는 올바른 지갑에 연결되어 있는지 확인하고 다시 시도하세요.",
@@ -256,13 +256,13 @@
   "Funds to raise:": "모금할 자금:",
   "Price per %symbol%:": "%symbol%당 가격:",
   "Price per %symbol% with fee:": "%symbol%당 가격과 수수료:",
-  "You need an active PancakeSwap Profile to take part in an IFO!": "IFO에 참여하려면 PancakeSwap 프로필을 활성화해야 합니다!",
+  "You need an active PancakeSwap Profile to take part in an ISPO!": "IFO에 참여하려면 PancakeSwap 프로필을 활성화해야 합니다!",
   "Achievement": "성과",
   "Which sale should I commit to? Can I do both?": "어떤 판매에 커밋해야 합니까? 둘 다 할 수 있습니까?",
   "How much is the participation fee?": "참가비는 얼마입니까?",
   "Where does the participation fee go?": "참가비는 어디로 갑니까?",
   "The CAKE from the participation fee will be burnt as part of the weekly token burn.": "참가비의 CAKE는 주간 토큰 소각의 일부로 소각됩니다.",
-  "How can I get an achievement for participating in the IFO?": "IFO 참여 성과를 올리는 방법은 무엇입니까?",
+  "How can I get an achievement for participating in the ISPO?": "ISPO 참여 성과를 올리는 방법은 무엇입니까?",
   "You need to contribute a minimum of about 10 USD worth of CAKE to either sale.": "어느 판매에든 최소 약 10 USD 상당의 CAKE를 기부해야 합니다.",
   "Contract Enabled": "계약 활성화됨",
   "You can now stake in the %symbol% vault!": "이제 %symbol% 볼트에 예치할 수 있습니다!",
@@ -454,7 +454,7 @@
   "Please authorize to access your account": "계정에 액세스하려면 인증하세요",
   "Unable to find connector": "커넥터를 찾을 수 없음",
   "The connector config is wrong": "커넥터 구성이 잘못되었습니다",
-  "You have contributed %amount% CAKE to this IFO!": "%amount% CAKE를 이 IFO에 기부했습니다!",
+  "You have contributed %amount% CAKE to this ISPO!": "%amount% CAKE를 이 IFO에 기부했습니다!",
   "Your %symbol% committed": "%symbol% 커밋함",
   "Your %symbol% RECLAIMED": "%symbol% 다시 클레임함",
   "Your %symbol% TO RECLAIM": "다시 클레임할 %symbol%",
@@ -493,12 +493,12 @@
   "Contact": "연락처",
   "The higher your team’s rank, the better your prizes!": "팀의 순위가 높을수록, 상금이 더 많습니다!",
   "Get Ready": "준비하세요",
-  "Activate PancakeSwap Profile to take part in next IFO‘s!": "PancakeSwap 프로필을 활성화하여 다음 IFO에 참여하세요!",
+  "Activate PancakeSwap Profile to take part in next ISPO‘s!": "PancakeSwap 프로필을 활성화하여 다음 IFO에 참여하세요!",
   "Trading Battle": "트레이딩 배틀",
   "Prediction": "예측",
-  "Initial Farm Offering": "초기 팜 오퍼링",
+  "Initial Staking Pool Offering": "초기 팜 오퍼링",
   "Successfully Enabled!": "활성화 성공!",
-  "You can now participate in the %symbol% IFO.": "이제 %symbol% IFO에 참여할 수 있습니다.",
+  "You can now participate in the %symbol% ISPO.": "이제 %symbol% IFO에 참여할 수 있습니다.",
   "Team Ranks": "팀 순위",
   "Prizes": "상금",
   "Rules": "규칙",
@@ -1350,7 +1350,7 @@
   "Supply Count": "공급 카운트",
   "Brand": "브랜드",
   "Success": "성공",
-  "Go to IFO": "IFO로 이동",
+  "Go to ISPO": "IFO로 이동",
   "Phishing warning: ": "피싱 경고: ",
   "please make sure you're visiting https://pancakeswap.finance - check the URL carefully.": "https://pancakeswap.finance를 방문하고 있는지 확인하세요. 주의하여 URL을 확인하세요.",
   "No bids yet": "아직 입찰 없음",
@@ -1361,7 +1361,7 @@
   "You can swap WBNB for BNB (and vice versa) with no trading fees.": "거래 수수료 없이 WBNB를 BNB로(또는 그 반대로) 스왑할 수 있습니다.",
   "Exchange rate is always 1 to 1.": "환율은 항상 1:1입니다.",
   "You can contribute to one or both, it doesn’t matter: only your overall contribution is counted for the achievement.": "하나 또는 둘 다에 기부할 수 있지만, 상관없습니다. 종합적인 기부만 상과로 카운트됩니다.",
-  "You’ll need %symbol% tokens to participate in the IFO!": "IFO에 참여하려면 %symbol% 토큰이 필요합니다!",
+  "You’ll need %symbol% tokens to participate in the ISPO!": "IFO에 참여하려면 %symbol% 토큰이 필요합니다!",
   "Get %symbol%, or make sure your tokens aren’t staked somewhere else.": "%symbol%을(를) 얻거나, 토큰이 다른 곳에서 예치되지 않았는지 확인하세요.",
   "Refresh": "새로 고침",
   "Basic": "기본",
@@ -1370,19 +1370,19 @@
   "Sign up for battle and you’re guaranteed a prize!": "배틀에 등록하면 상금이 보장됩니다!",
   "Compete with other teams for the highest trading volume!": "가장 높은 거래량을 위해 다른 팀과 경쟁하세요!",
   "Trading Competition": "거래 대회",
-  "To participate in the next IFO, lock some CAKE in the fixed-term staking CAKE pool!": "다음 IFO에 참여하려면, 고정 기간 예치 CAKE 풀에 CAKE를 잠그세요!",
+  "To participate in the next ISPO, lock some CAKE in the fixed-term staking CAKE pool!": "다음 IFO에 참여하려면, 고정 기간 예치 CAKE 풀에 CAKE를 잠그세요!",
   "Lock CAKE in the CAKE pool": "CAKE 풀에 CAKE 잠그기",
   "How does the number of iCAKE calculated?": "iCAKE 수는 어떻게 계산됩니까?",
   "Learn more about iCAKE": "iCAKE에 대해 자세히 알아보세요",
   "For the basic sale, Max CAKE entry is capped by minimum between your average CAKE balance in the iCAKE, or the pool’s hard cap. To increase the max entry, Stake more CAKE into the iCAKE": "기본 판매의 경우 최대 CAKE 엔트리의 상한선은 풀의 하드 캡, 또는 iCAKE의 평균 CAKE 잔액 사이 최소값입니다. 최대 엔트리를 늘리려면 iCAKE에 더 많은 CAKE를 예치하세요.",
-  "You don’t have any iCAKE available for IFO public sale.": "IFO 공개 판매에 사용 가능한 iCAKE가 없습니다.",
+  "You don’t have any iCAKE available for ISPO public sale.": "ISPO 공개 판매에 사용 가능한 iCAKE가 없습니다.",
   "Sale Finished!": "판매 완료!",
   "Start in": "시작:",
   "Exceeded max CAKE entry": "최대 CAKE 엔트리 초과함",
   "Only applies within %num% days of staking. Unstaking after %num% days will not include a fee. Timer resets every time you stake new CAKE in the pool.": "예치 후 %num%일 내에만 적용됩니다. %num%일 후 예치 취소하면 수수료가 포함되지 않습니다. 풀에서 새로운 CAKE를 예치할 때마다 타이머가 재설정됩니다.",
   "unstaking fee if withdrawn within %num%h": "%num%시간 내에 인출하는 경우 예치 취소 수수료",
   "Earn %asset%": "%asset% 획득",
-  "IFO Pool": "IFO 풀",
+  "ISPO Pool": "ISPO 풀",
   "Chart": "차트",
   "by": "-",
   "You’ve successfully claimed tokens back.": "토큰을 다시 클레임했습니다.",
@@ -1453,7 +1453,7 @@
   "Old Farms": "이전 팜",
   "Please note that this is the old BTT token, which has been swapped to the new BTT tokens in the following ratio:": "이는 다음 비율로 새로운 BTT 토큰으로 스왑된 이전 BTT 토큰입니다:",
   "This pool was misconfigured. Please unstake your tokens from it, emergencyWithdraw method will be used. Your tokens will be returned to your wallet, however rewards will not be harvested.": "이 풀은 잘못 구성되었습니다. 이 풀에서 토큰을 예치 취소하세요. emergencyWithdraw 방법이 사용됩니다. 토큰은 지갑으로 반환되지만 리워드는 수확되지 않습니다.",
-  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal.": "비공개 판매의 경우 자격을 갖춘 각 참가자는 IFO 투표 제안과 함께 게시되는 최대 커밋 한도까지 CAKE를 얼마든지 커밋할 수 있습니다.",
+  "For the private sale, each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal.": "비공개 판매의 경우 자격을 갖춘 각 참가자는 ISPO 투표 제안과 함께 게시되는 최대 커밋 한도까지 CAKE를 얼마든지 커밋할 수 있습니다.",
   "Meet any one of the following requirements to be eligible.": "자격을 갖추려면 다음 요구 사항 중 하나를 충족해야 합니다.",
   "You are eligible to participate in this Private Sale!": "이 비공개 판매에 참여할 자격이 있습니다!",
   "Meet any one of the requirements to join:": "참여하려면 요구 사항 중 하나를 충족해야 합니다:",
@@ -1468,9 +1468,9 @@
   "Eligible NFT avatar found!": "적합한 NFT 아바타를 찾았습니다!",
   "The maximum amount of CAKE you can commit to the Public Sale equals the number of your iCAKE. Lock more CAKE for longer durations to increase the maximum CAKE you can commit to the sale.": "공개 판매에 커밋할 수 있는 최대 CAKE 수량은 iCAKE 수와 같습니다. 기간을 연장하려면 더 많은 CAKE를 잠그고 판매에 커밋할 수 있는 최대 CAKE를 늘리세요.",
   "What’s the difference between a Public Sale and Private Sale?": "공개 판매와 비공개 판매의 차이점은 무엇입니까?",
-  "In the current IFO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the IFO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the IFO voting proposal. The Private Sale has no participation fee.": "현재 IFO 형식. 새로운 비공개 판매가 있습니다. 참가하기 위해서는 참가자가 IFO 카드에 표시된 특정 요구 사항을 충족해야 합니다. 각각의 적격 참가자는 IFO 투표 제안과 함께 게시되는 최대 커밋 한도까지 CAKE를 얼마든지 커밋할 수 있습니다. 비공개 판매는 참가비가 없습니다.",
+  "In the current ISPO format. There is a brand new Private Sale. To participate, participants will have to meet certain requirements presented on the ISPO card. Each eligible participant will be able to commit any amount of CAKE up to the maximum commit limit, which is published along with the ISPO voting proposal. The Private Sale has no participation fee.": "현재 ISPO 형식. 새로운 비공개 판매가 있습니다. 참가하기 위해서는 참가자가 ISPO 카드에 표시된 특정 요구 사항을 충족해야 합니다. 각각의 적격 참가자는 ISPO 투표 제안과 함께 게시되는 최대 커밋 한도까지 CAKE를 얼마든지 커밋할 수 있습니다. 비공개 판매는 참가비가 없습니다.",
   "You can choose one or both at the same time!": "하나 또는 동시에 둘 다를 선택할 수 있습니다!",
-  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of IFO tokens.": "먼저 비공개 판매에 참여할 수 있는 자격이 있는지 확인하는 것이 좋습니다. 공개 판매에서 커밋하는 금액이 너무 적으면 의미 있는 금액의 IFO 토큰을 받지 못할 수 있습니다.",
+  "We recommend you to check if you are eligible to participate in the Private Sale first. In the Public Sale, if the amount you commit is too small, you may not receive a meaningful amount of ISPO tokens.": "먼저 비공개 판매에 참여할 수 있는 자격이 있는지 확인하는 것이 좋습니다. 공개 판매에서 커밋하는 금액이 너무 적으면 의미 있는 금액의 ISPO 토큰을 받지 못할 수 있습니다.",
   "Just remember you need an active PancakeSwap Profile in order to participate.": "참여하려면 활성 PancakeSwap 프로필이 필요합니다.",
   "There’s only a participation fee for the Public Sale: there’s no fee for the Private Sale.": "공개 판매에만 참가비가 있습니다: 비공개 판매에는 참가비가 없습니다.",
   "How to Take Part in the Public Sale": "공개 판매에 참여하는 방법",
@@ -1568,8 +1568,8 @@
   "I acknowledge that:": "본인은 다음을 인정합니다:",
   "I understand that small orders are executed at higher execution price due to gas fees.": "가스 요금으로 인해 소액 주문이 더 높은 실행 가격으로 실행됨을 이해합니다.",
   "I understand that using taxed tokens on limit orders is highly discouraged and not recommended - Taxed tokens can be stuck in limit orders and lost forever because of impossibility to execute an order for such tokens": "지정가 주문에 세금 부과 토큰을 사용하는 것은 별로 권장되지 않음을 이해합니다. 세금 부과 토큰은 해당 토큰에 대한 주문을 실행할 수 없기 때문에 지정가 주문에 갇혀 영원히 손실될 수 있습니다.",
-  "Apply to run an IFO!": "IFO 실행을 신청하세요!",
-  "Follow our social channels to learn more about the next IFO.": "다음 IFO에 대해 자세히 알아보려면 소셜 채널을 팔로우하세요.",
+  "Apply to run an ISPO!": "ISPO 실행을 신청하세요!",
+  "Follow our social channels to learn more about the next ISPO.": "다음 IFO에 대해 자세히 알아보려면 소셜 채널을 팔로우하세요.",
   "Performance fee only applies to the flexible staking rewards.": "성과 수수료는 유연한 예치 리워드에만 적용됩니다.",
   "Total locked": "총 잠금",
   "What’s the difference?": "차이점이 무엇인가요?",
@@ -1642,7 +1642,7 @@
   "Token Vesting": "토큰 베스팅",
   "You have tokens available for claiming now!": "이제 클레임할 수 있는 토큰이 있습니다!",
   "You have no tokens available for claiming": "클레임할 수 있는 토큰이 없습니다",
-  "Participate in our next IFO. and remember to lock your CAKE to increase your allocation!": "다음 IFO에 참여하고 할당량을 늘리기 위해 CAKE를 잠그는 것을 잊지 마세요!",
+  "Participate in our next ISPO. and remember to lock your CAKE to increase your allocation!": "다음 IFO에 참여하고 할당량을 늘리기 위해 CAKE를 잠그는 것을 잊지 마세요!",
   "Released": "릴리스됨",
   "Vested": "베스팅됨",
   "You will be able to withdraw the staked CAKE and profit only when the staking position is unlocked": "예치 포지션이 잠금 해제된 경우에만 예치된 CAKE 및 수익을 인출할 수 있습니다",
@@ -1660,7 +1660,7 @@
   "The price of token prizes ($CAKE and $DAR) in USD will be determined as per their BUSD pair price during the tally period.": "토큰 상금($CAKE 및 $DAR)의 USD 가격은 계산 기간 동안 해당 BUSD 쌍 가격을 기준으로 결정됩니다.",
   "Eligible pairs: DAR/BNB, CAKE/BNB, and CAKE/BUSD. Please note that the volume from limit orders will not be indexed.": "적격 통화 쌍: DAR/BNB, CAKE/BNB 및 CAKE/BUSD. 지정가 주문의 볼륨은 인덱싱되지 않습니다.",
   "iCAKE": "iCAKE",
-  "Missed this IFO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "이 IFO를 놓쳤습니까? 잠긴 예치 포지션이 잠금 해제되지 않은 경우 향후 IFO에서 동일한 양의 iCAKE를 이용할 수 있습니다.",
+  "Missed this ISPO? You will enjoy the same amount of iCAKE for future IFOs if your locked-staking position is not unlocked.": "이 IFO를 놓쳤습니까? 잠긴 예치 포지션이 잠금 해제되지 않은 경우 향후 IFO에서 동일한 양의 iCAKE를 이용할 수 있습니다.",
   "The number of iCAKE equals the locked staking amount if the staking duration is longer than %weeks% weeks. If the staking duration is less than %weeks% weeks, it will linearly decrease based on the staking duration.": "예치 기간이 %weeks%주를 초과하는 경우 iCAKE 수는 잠긴 예치 금액과 같습니다. 예치 기간이 %weeks%주 미만인 경우 iCAKE 수는 예치 기간에 따라 선형적으로 감소합니다.",
   "Go to CAKE pool": "CAKE 풀로 이동",
   "April": "4월",
@@ -1684,7 +1684,7 @@
   "Lock more CAKE for longer durations to increase the maximum number of CAKE you can commit to the sale.": "판매에 커밋할 수 있는 최대 CAKE 수를 늘리려면 더 오랜 기간 동안 더 많은 CAKE를 잠그세요.",
   "No vesting token to claim.": "클레임할 베스팅 토큰이 없습니다.",
   "You have claimed all available token.": "사용 가능한 모든 토큰을 클레임했습니다.",
-  "View IFO": "IFO 보기",
+  "View ISPO": "ISPO 보기",
   "Your DAR volume rank": "내 DAR 볼륨 순위",
   "Based on your DAR/BNB trading": "DAR/BNB 거래 기준",
   "Now": "지금",
@@ -1747,11 +1747,11 @@
   "For the unlimited sale, Max CAKE entry is capped by your average CAKE balance in the iCake. To increase the max entry, Stake more CAKE into the iCake": "무제한 판매의 경우 최대 CAKE 엔트리의 상한선은 iCake의 평균 CAKE 잔액입니다. 최대 엔트리를 늘리려면 iCake에 더 많은 CAKE를 예치하세요.",
   "In the Public Sale, everyone with an active PancakeSwap profile can commit. However the maximum amount of CAKE users can commit, is equal to the number of iCAKE they have.": "공개 판매에서는 활성 PancakeSwap 프로필이 있는 누구나 커밋할 수 있습니다. 그러나 CAKE 사용자가 커밋할 수 있는 최대 금액은 이들이 가지고 있는 iCAKE 수와 같습니다.",
   "And there’s a fee for participation: see below.": "그리고 참가비가 있습니다. 아래를 참조하세요.",
-  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the IFO.": "참가비는 IFO의 \"공개 판매\" 부분에서 오버플로 비율에 따라 클리프에서 감소합니다.",
-  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the IFO proposal (vote) for the specifics of the IFO you want to take part in.": "참고: 수수료는 IFO마다 다를 수 있습니다. 참가비에 대해 자세히 알아보려면 참가할 IFO의 세부 사항에 대한 IFO 제안(투표)에 나오는 세부 정보를 참조하세요.",
-  "This IFO has token vesting. Purchased tokens are released over a period of time.": "이 IFO에는 토큰 베스팅이 있습니다. 구매한 토큰은 일정 기간 동안 릴리스됩니다.",
+  "The participation fee decreases in cliffs, based on the percentage of overflow from the “Public Sale” portion of the ISPO.": "참가비는 IFO의 \"공개 판매\" 부분에서 오버플로 비율에 따라 클리프에서 감소합니다.",
+  "Note: Fees may vary between different IFOs. To learn more about the participation fees, please refer to the details in the ISPO proposal (vote) for the specifics of the ISPO you want to take part in.": "참고: 수수료는 IFO마다 다를 수 있습니다. 참가비에 대해 자세히 알아보려면 참가할 IFO의 세부 사항에 대한 ISPO 제안(투표)에 나오는 세부 정보를 참조하세요.",
+  "This ISPO has token vesting. Purchased tokens are released over a period of time.": "이 IFO에는 토큰 베스팅이 있습니다. 구매한 토큰은 일정 기간 동안 릴리스됩니다.",
   "Learn more in the vote proposal": "투표 제안에서 자세히 알아보기",
-  "If you don’t commit enough CAKE, you may not receive a meaningful amount of IFO tokens, or you may not receive any IFO tokens at all.": "CAKE를 충분히 커밋하지 않으면 의미 있는 IFO 토큰 금액을 받지 못하거나 IFO 토큰을 전혀 받지 못할 수 있습니다.",
+  "If you don’t commit enough CAKE, you may not receive a meaningful amount of ISPO tokens, or you may not receive any ISPO tokens at all.": "CAKE를 충분히 커밋하지 않으면 의미 있는 ISPO 토큰 금액을 받지 못하거나 ISPO 토큰을 전혀 받지 못할 수 있습니다.",
   "~%num% available to claim at sales end": "~%num%: 판매 종료 시 클레임 가능",
   "Vested percentage:": "베스팅된 비율:",
   "Vesting schedule:": "베스팅 스케줄:",
@@ -1772,7 +1772,7 @@
   "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.": "Your vCAKE boosting was expired at the snapshot block. Renew your fixed-term staking position to activate the boost for future voting proposals.",
   "Zap allows you to add liquidity with only 1 single token. Click": "Zap을 사용하면 싱글 토큰 1개만으로 유동성을 추가할 수 있습니다. 다음을 클릭하세요:",
   "to try.": "시도해 볼 수 있습니다.",
-  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when IFO ends.": "구매한 토큰의 %percentageVested%%는 일정 기간 동안 선형적으로 베스팅되고 릴리스됩니다. 구매한 토큰의 %percentageTgeRelease%%는 즉시 릴리스되며 IFO가 종료되면 클레임할 수 있습니다.",
+  "%percentageVested%% of the purchased token will get vested and released linearly over a period of time. %percentageTgeRelease%% of the purchased token will be released immediately and available for claiming when ISPO ends.": "구매한 토큰의 %percentageVested%%는 일정 기간 동안 선형적으로 베스팅되고 릴리스됩니다. 구매한 토큰의 %percentageTgeRelease%%는 즉시 릴리스되며 IFO가 종료되면 클레임할 수 있습니다.",
   "The vested tokens will be released linearly over a period of %weeks% weeks.": "베스팅된 토큰은 %weeks%주 기간 동안 선형적으로 릴리스됩니다.",
   "Select a Network": "네트워크 선택",
   "LP Rewards APR": "LP Rewards APR",
